--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_refresh">Refresh</string>
     <string name="error_unknown">Oops! Please check your internet and try again.</string>
+    <string name="action_about">About</string>
     <array name="scheme_colors">
         <item>@color/orange</item>
         <item>@color/pink</item>
